--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <a class="index-btn" href="mailto:forita74@gmail.com">Pedir una sesión de prueba gratis</a>
             </div>
             <div class="header_image">
-                <img src="images/header.jpg" alt="header" />
+                <img src="images/Victoria1.jpg" alt="header" />
             </div>
         </div>
    </header>
@@ -92,7 +92,7 @@
     <a href="https://wa.me/34697170319?text=Me%20gustaría%20pedir%20una%20cita.%20Gracias!" class="whatsapp" target="_blank">
         <i class="fa fa-whatsapp whatsapp-icon"></i></a>
     <div class="why_image" id="why_image">
-        <img src="images/why.jpg" alt="why yoga" />
+        <img src="images/Victoria2.jpg" alt="why yoga" />
     </div>
     <div class="why_content">
         <div class="why_content">
