--- a/masaje.html
+++ b/masaje.html
@@ -50,9 +50,30 @@
     </div>
     <div class="why_content">
         <div class="why_content">
-            <h2 class="section_header">Beneficios del masaje</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, in. Beatae tenetur ipsa nobis consequatur, ut provident doloribus veritatis voluptas amet error modi ipsum autem officia iure doloremque quasi at numquam sint inventore quibusdam unde cupiditate velit! Nemo, minus vero.</p>
+            <h2 class="section_header">El Masaje Arún Tacto Consciente</h2>
+            <p>Es un masaje que engloba varias técnicas provenientes de Oriente y Occidente, que se utilizan para liberar todas las partes físicas de nuestro cuerpo, necesarias para su buen funcionamiento. Pero no se queda solo en lo físico.
+                 Una parte muy importante de este tipo de masaje es su lado energético(pues somos en gran parte energía), que contribuye a la liberación de nuestra psique y nuestras emociones. Nos ayuda a conectar con nuestra consciencia(que no conciencia), revelando todo aquello que tengamos que sanar. 
+                El terapeuta que lo realiza parte de la base que todo está perfecto; no hay juicio, ni pretensión de cambiar nada en la persona que lo recibe. Todas las personas que reciben el masaje coinciden en el resultado: es liberación, es paz; es una meditación compartida entre quién da y quién recibe. </p>
             
+        </div>
+    </div>
+
+    <div class="why_content">
+        <div class="why_content_terapias">
+            <h2 class="section_header">OTRAS TERAPIAS</h2>
+            <ul>
+                <li>
+                    <span><i class="ri-checkbox-circle-fill"></i></span>
+                    Flores de Bach
+                </li>
+                <img src="images/flores_bach.jpg" alt="">
+                <li>
+                    <span><i class="ri-checkbox-circle-fill"></i></span>
+                    Auriculoterapia
+                </li>
+                <img src="images/auricula.jpg" alt="">
+            </ul>
+
         </div>
     </div>
  </section>
@@ -120,7 +141,7 @@
     <div class="stories_grid">
       <div class="stories_card">
         <div class="stories_author">
-            <img src="images/stories-1.jpg" alt="author" />
+         <img src="images/woman_avatar.jpg" alt="author">
             <div class="stories_author_details">
               <h4>Blanca</h4>
               <h6>Paciente</h6>
@@ -138,7 +159,7 @@ Y así aprendo a endender los mensajes de mi cuerpo... y a cuidarlo."
       </div>
       <div class="stories_card">
         <div class="stories_author">
-            <img src="images/Maricarmen creo.jpg" alt="author" />
+         <img src="images/woman_avatar.jpg" alt="author" />
             <div class="stories_author_details">
               <h4>María del Carmen M.G.</h4>
               <h6>Paciente</h6>
