--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     <a href="https://wa.me/34655121070?text=Me%20gustaría%20pedir%20una%20cita.%20Gracias!" class="whatsapp" target="_blank">
         <i class="fa fa-whatsapp whatsapp-icon"></i></a>
     <div class="why_image" id="why_image_about">
-        <img src="images/sesiones1 (4).jpg" class="why_img_about" alt="why yoga" />
+        <img src="images/Victoria_sobremi.jpg" class="why_img_about" alt="why yoga" />
     </div>
     <div class="why_content_aboutme">
         <div class="why_content">
@@ -332,11 +332,11 @@ Tras dejarlo un par de años, lo retome porque necesitaba hacer algo y además m
             <div class="footer_logo"><a href="">Jai Maa Yoga</a></div>
         </div>
         <div class="footer_col">
-            <p>Calle Arriba 7, Mazagón 21130, Huelva</p>
+            <p>Mazagón, 21130 Huelva</p>
         </div>
         <div class="footer_col">
             <div class="footer_socials">
-                <a href="#"><i class="ri-facebook-fill"></i></a>
+                <!-- <a href="#"><i class="ri-facebook-fill"></i></a> -->
                 <a href="tel:+34655121070"><i class="ri-phone-fill"></i></a>
                 <a href="https://www.instagram.com/vicn_natura_ness127/"><i class="ri-instagram-line"></i></a>
                 <a href="mailto:forita74@gmail.com"><i class="ri-mail-line"></i></a>
