--- a/masaje.html
+++ b/masaje.html
@@ -219,11 +219,11 @@ Gracias por su compromiso, su sensibilidad y por aportar bienestar en todas sus 
             <div class="footer_logo"><a href="">Jai Maa Yoga</a></div>
         </div>
         <div class="footer_col">
-            <p>Calle Arriba 7, Mazagón 21130, Huelva</p>
+            <p>Mazagón, 21130 Huelva</p>
         </div>
         <div class="footer_col">
             <div class="footer_socials">
-                <a href="#"><i class="ri-facebook-fill"></i></a>
+                <!-- <a href="#"><i class="ri-facebook-fill"></i></a> -->
                 <a href="https://www.instagram.com/vicn_natura_ness127/"><i class="ri-instagram-line"></i></a>
                 <a href="mailto:forita74@gmail.com"><i class="ri-mail-line"></i></a>
                 <!--<a href="#"><i class="ri-phone-line"></i></a>-->
