--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
     
+     <!-- splide js cdn -->
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css">
+    
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
@@ -18,7 +21,7 @@
 <body>
     <nav>
         <div class="nav_logo">
-            <img src="images/logo.png" alt="logo">
+            <img src="images/iconowa.jpg" alt="logo">
             <span>Jai Maa Yoga</span>
         </div>
         <div>
@@ -150,6 +153,24 @@
 
     </div>
  </section>
+
+ <!-- SPLIDE -->
+<!-- <div class="navbar"></div> -->
+<div class="content">
+    <div class="slider-wrapper">
+        Tipos de Yoga
+        <div class="slider">
+            <div class="slider-text1">Hatha</div>
+            <div class="slider-text2">Yin</div>
+            <div class="slider-text3">Lyengar</div>
+            <div class="slider-text4">Nidra</div>
+            <div class="slider-text5">Facial</div>
+        </div>
+    </div>
+</div>
+ <!-- END OF SPLIDE -->
+
+
 
  <section class="section_container why_container">
     <a href="https://wa.me/34655121070?text=Me%20gustaría%20pedir%20una%20cita.%20Gracias!" class="whatsapp" target="_blank">
@@ -350,6 +371,11 @@ Tras dejarlo un par de años, lo retome porque necesitaba hacer algo y además m
     </div>
 </footer>
 
+    <!-- SPLIDE -->
+    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
+    <!-- sPLIDE jS AUTOSCROLL CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-auto-scroll@0.5.3/dist/js/splide-extension-auto-scroll.min.js"></script>
+    <script src="script.js"></script>
    <script src="main.js"></script>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
    <script type="text/javascript" src="script.js"></script>
