--- a/index.html
+++ b/index.html
@@ -155,19 +155,13 @@
  </section>
 
  <!-- SPLIDE -->
-<!-- <div class="navbar"></div> -->
-<div class="content">
-    <div class="slider-wrapper">
-        Tipos de Yoga
-        <div class="slider">
-            <div class="slider-text1">Hatha</div>
-            <div class="slider-text2">Yin</div>
-            <div class="slider-text3">Lyengar</div>
-            <div class="slider-text4">Nidra</div>
-            <div class="slider-text5">Facial</div>
-        </div>
-    </div>
+<section>
+<div class="wrapper">
+    <h2>Tipos de Yoga: <span></span></h2>
+    
+    
 </div>
+</section>
  <!-- END OF SPLIDE -->
 
 
