--- a/index.html
+++ b/index.html
@@ -316,8 +316,9 @@ Tras dejarlo un par de años, lo retome porque necesitaba hacer algo y además m
         <div class="image_conteiner">
            
             <figure class="animate-box">
-               <video src="Vídeos/Primer video clases Yoga invierno.mp4" controls width="250"></video>
-            </figure>      
+               <video src="Vídeos/Testimonio_J.mp4" controls width="250"></video>
+               <h1>Jesús</h1>
+            </figure>     
         </div>
         <div class="popup_image">
             <span>&times;</span>
