--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ Tras dejarlo un par de años, lo retome porque necesitaba hacer algo y además m
         <div class="image_conteiner">
            
             <figure class="animate-box">
-               <video src="Vídeos/Testimonio_J.mp4" controls width="250"></video>
+               <video src="" controls width="250"></video>
                <h1>Jesús</h1>
             </figure>     
         </div>
