--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <div>
             <a class="btn" href="masaje.html">Masaje</a>
         </div>
+        
          <ul class="nav_links">  
             <li class="link"><a href="#home">Menú Principal</a></li>
             <li class="link"><a href="#why_image">¿Porqué Yoga?</a></li>
@@ -312,11 +313,11 @@ Tras dejarlo un par de años, lo retome porque necesitaba hacer algo y además m
     </div>
 
     <div class="conteiner">
-        <h1>VÍDEO-TESTIMONIO</h1>
+        <h1>VÍDEO-TESTIMONIO <br>Jesús</h1>
         <div class="image_conteiner">
            
             <figure class="animate-box">
-               <video src="" controls width="250"></video>
+               <video src="Vídeos/Testimonio J2.mp4" controls width="250"></video>
                <h1>Jesús</h1>
             </figure>     
         </div>
