--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div>
             <a class="btn" href="masaje.html">Masaje</a>
         </div>
-        
+        <!-- <i class="ri-menu-fill" id="toggle"></i> -->
          <ul class="nav_links">  
             <li class="link"><a href="#home">Menú Principal</a></li>
             <li class="link"><a href="#why_image">¿Porqué Yoga?</a></li>
@@ -37,31 +37,23 @@
             <!-- <li class="link"><a href="bloc.html">Bloc</a></li> -->
             <!-- <li class="link"><a href="masaje.html">Masaje</a></li> -->
             <li class="link"><a href="#contact">Contacto</a></li>
-            <li class="menu-button" onclick="showSidebar()"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
+            <!-- <li class="menu-button" onclick="showSidebar()"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li> -->
         </ul>
-        <ul class="sidebar">
-            <li onclick="hideSidebar()"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
+         <ul class="sidebar">  
+            <!-- <li onclick="hideSidebar()"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li> -->
             <li class="link"><a href="#home">Menú Principal</a></li>
             <li class="link"><a href="#why_image">¿Porqué Yoga?</a></li>
             <li class="link"><a href="#membership">Me apunto</a></li>
             <li class="link"><a href="#stories">Testimonios</a></li>
-            <!-- <li class="link"><a href="blog3.html">Blog</a></li> -->
-            <li class="link"><a href="masaje.html">Masaje</a></li>
+             <li class="link"><a href="blog3.html">Blog</a></li> 
+             <li class="link"><a href="masaje.html">Masaje</a></li>
             <li class="link"><a href="#contact">Contacto</a></li>
         </ul>
     </div> 
     </div>
     <script src="app.js"></script>
     </nav>
-    <script>
-        function showSidebar() {
-            document.querySelector(".sidebar").style.display = "flex";
-        }
-
-        function hideSidebar() {
-            document.querySelector(".sidebar").style.display = "none";
-        }
-    </script>
+    
     <!-- <div id="hamburger-icon" onclick="toggleMobileMenu(this)"> 
         <div class="bar1"></div>
         <div class="bar2"></div>
