--- a/masaje.html
+++ b/masaje.html
@@ -39,7 +39,7 @@
                 <a class="index-btn" href="https://wa.me/34655121070?text=¡Hola!%20Me%20gustaría%20obtener%20más%20información%20sobre%20las%20clases.%20Gracias!">Pedir una sesión</a>
             </div>
             <div class="header_image">
-                <img src="images/msj1.jpg" alt="header" />
+                <img src="images/aceites.jpg" alt="header" />
             </div>
         </div>
    </header>
