--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
  <!-- SPLIDE -->
 <section>
 <div class="wrapper">
-    <h2>Tipos de Yoga: <span></span></h2>
+    <h2>Estilos de Yoga que practicamos: <span></span></h2>
     
     
 </div>
