--- a/masaje.html
+++ b/masaje.html
@@ -13,13 +13,13 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <title>Jai Maa Yoga/Masaje</title>
+    <title>Jai Maa Yoga</title>
 </head>
 <body>
     <nav>
         <div class="nav_logo">
             <img src="images/iconowa.jpg" alt="logo">
-            <span>Jai Maa <span></span>/ <span></span>Masaje</span>
+            <span>Jai Maa Masaje</span>
         </div>
          <ul class="nav_links">  
             <li class="masage_link"><a href="index.html">Menú Principal</a></li>
