--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
             <img src="images/iconowa.jpg" alt="logo">
             <span>Jai Maa Yoga</span>
         </div>
+        <div class="hamburger" id="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
 
         <div>
             <!-- <a class="btn" href="masaje.html">Masaje</a> -->
@@ -42,11 +47,7 @@
             <li class="link"><a href="#contact">Contacto</a></li>
             <!-- <li class="menu-button" onclick="showSidebar()"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li> -->
         </ul>
-        <div class="hamburger" id="hamburger">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-        </div>
+       
        
     </div>
     <script src="app.js"></script>
@@ -69,8 +70,8 @@
    </header>
 
    <section class="section_container why_container">
-    <a href="https://wa.me/34697170319?text=Me%20gustaría%20pedir%20una%20cita.%20Gracias!" class="whatsapp" target="_blank">
-        <i class="fa fa-whatsapp whatsapp-icon"></i></a>
+    <!-- <a href="https://wa.me/34697170319?text=Me%20gustaría%20pedir%20una%20cita.%20Gracias!" class="whatsapp" target="_blank"> -->
+        <!-- <i class="fa fa-whatsapp whatsapp-icon"></i></a> -->
     <div class="why_image" id="why_image">
         <img src="images/Victoria2.jpg" alt="why yoga" />
     </div>
@@ -144,8 +145,8 @@
 
 
  <section class="section_container why_container">
-    <a href="https://wa.me/34655121070?text=Me%20gustaría%20pedir%20una%20cita.%20Gracias!" class="whatsapp" target="_blank">
-        <i class="fa fa-whatsapp whatsapp-icon"></i></a>
+    <!-- <a href="https://wa.me/34655121070?text=Me%20gustaría%20pedir%20una%20cita.%20Gracias!" class="whatsapp" target="_blank"> -->
+        <!-- <i class="fa fa-whatsapp whatsapp-icon"></i></a> -->
     <div class="why_image" id="why_image_about">
         <img src="images/Victoria_sobremi.jpg" class="why_img_about" alt="why yoga" />
     </div>
