--- a/masaje.html
+++ b/masaje.html
@@ -21,6 +21,9 @@
             <img src="images/iconowa.jpg" alt="logo">
             <span>Jai Maa Masaje</span>
         </div>
+        <div>
+            <a class="btn" href="index.html">Volver a Yoga</a>
+        </div>
          <ul class="nav_links">  
             <li class="masage_link"><a href="index.html">Menú Principal</a></li>
         </ul>
