--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ Tras dejarlo un par de años, lo retome porque necesitaba hacer algo y además m
             <div class="footer_socials">
                 <!-- <a href="#"><i class="ri-facebook-fill"></i></a> -->
                 <a href="tel:+34655121070"><i class="ri-phone-fill"></i></a>
-                <a href="https://www.instagram.com/vicn_natura_ness127/"><i class="ri-instagram-line"></i></a>
+                <a href="https://www.instagram.com/mavictoriavaz?igsh=MXdtdnZ6YWZjZmYweg=="><i class="ri-instagram-line"></i></a>
                 <a href="mailto:forita74@gmail.com"><i class="ri-mail-line"></i></a>
                 <!--<a href="#"><i class="ri-phone-line"></i></a>-->
                 <!-- <a href="https://wa.me/34655121070?text=¡Hola!%20Me%20gustaría%20obtener%20más%20información%20sobre%20las%20clases.%20Gracias!"a><i class="ri-whatsapp-line"></i></a> -->
