--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
 
 
  <section class="section_container why_container">
-    <!-- <a href="https://wa.me/34655121070?text=Me%20gustaría%20pedir%20una%20cita.%20Gracias!" class="whatsapp" target="_blank"> -->
-        <!-- <i class="fa fa-whatsapp whatsapp-icon"></i></a> -->
+    <a href="https://wa.me/34655121070?text=Me%20gustaría%20pedir%20una%20cita.%20Gracias!" class="whatsapp" target="_blank">
+        <i class="fa-brands fa-whatsapp"></i></a>
     <div class="why_image" id="why_image_about">
         <img src="images/Victoria_sobremi.jpg" class="why_img_about" alt="why yoga" />
     </div>
@@ -169,6 +169,8 @@
             Todo ello ha expandido mi consciencia y lo sigue haciendo, a la vez que acompaño a quien quiera hacerlo.
         Es un modo de vida consciente, sobre la esterilla y fuera de ella. </p>
         <p>Me llamo Victoria, y estaré encantada de ayudarte en tu camino.</p>
+        <div class="line"></div>
+        <p class="cursive">Mi agradecimiento a Dhyan Agni y Muditosan, mis maestros.</p>
         </div>
     </div>
  </section>
@@ -279,6 +281,38 @@
             "Estos ratitos de yoga me bajan las revoluciones a las que me muevo durante la semana, siempre corriendo de un lado al otro... Es calma en la tormenta, es generar energía desde la calma. No sé explicarlo muy bien, pero me aporta muchísimo."
           </p>
         </div>
+
+        <div class="stories_card">
+            <div class="stories_author">
+                <img src="images/Mariló1.jpg" alt="author" />
+                <div class="stories_author_details">
+                  <h4>Mariló</h4>
+                  <h6>Alumna</h6>
+                </div>
+              </div>
+            <div class="stories_content">
+              <span><i class="ri-double-quotes-l"></i></span>
+              <p>
+                "Mi vida empezó a cambiar el día en que empecé a acudir a tus clases. Allí aprendí a vivir la vida con paz, a mirar lo bueno de cada persona, a querer y valorar todo lo que tengo y todo lo que está a mi alrededor y sobre todo, aprendí a amarme a mí misma. Gracias por siempre por todo lo aprendido a tu lado, Viky."
+              </p>
+            </div>
+
+            <div class="stories_card">
+                <div class="stories_author">
+                    <img src="images/Belén.jpg" alt="author" />
+                    <div class="stories_author_details">
+                      <h4>Belén</h4>
+                      <h6>Alumna</h6>
+                    </div>
+                  </div>
+                <div class="stories_content">
+                  <span><i class="ri-double-quotes-l"></i></span>
+                  <p>
+                    "Para mí el yoga es un modo de vida... Da elasticidad a mí cuerpo ,relaja mi mente, y equilibra mi paz mental.
+                    Para mí se ha convertido en una necesidad básica en mi vida. 
+                    Gracias a Victoria estoy enganchada al Yoga.💜"
+                  </p>
+                </div>
         
       </div>
       <div class="stories_card">
