--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Clases de Yoga en Mazagón, Masaje en Mazagón, clases de Yoga en Huelva, masaje en Huelva" />
+	<meta name="keywords" content="yoga en Mazagón, clases de yoga en Mazagón, Yoga en Huelva, Yoga integral en Mazagón, Yoga integral en Huelva, Yoga integrativo en Mazagón, Yoga integrativo en Huelva, masaje en Mazagón, masaje terapeutico en Mazagon, masaje terapeutico en Huelva, Yoga Mazagón, masaje Mazagón" />
+	<meta name="robots" content="index. follow">
+	<meta name="author" content="Jai Maa Yoga" />
     <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
     rel="stylesheet"
