--- a/masaje.html
+++ b/masaje.html
@@ -153,7 +153,7 @@
           <p>
             "En estos años ( desde 2019 ) he dejado la placa dental de descarga (mandíbula liberada). El nudo-entresijo de la escápula liberado. Los tendones del pie, el cuello, los hombros  recuperan la flexibilidad perdida..
 Todas mis emociones encuentran en el masaje un momento para ganar calma y reposo, los pensamientos se hacen más tolerables. 
-Y así aprendo a endender los mensajes de mi cuerpo... y a cuidarlo."
+Y así aprendo a entender los mensajes de mi cuerpo... y a cuidarlo."
           </p>
         </div>
         
