--- a/masaje.html
+++ b/masaje.html
@@ -21,9 +21,9 @@
             <img src="images/iconowa.jpg" alt="logo">
             <span>Jai Maa Masaje</span>
         </div>
-        <div>
+        <!-- <div> 
             <a class="btn" href="index.html">Volver a Yoga</a>
-        </div>
+        </div>-->
          <ul class="nav_links">  
             <li class="masage_link"><a href="index.html">Menú Principal</a></li>
         </ul>
@@ -182,6 +182,10 @@ Gracias por su compromiso, su sensibilidad y por aportar bienestar en todas sus 
       </div>
     </div>
   </section>
+
+  <div class="masaje-button-masaje">
+    <a class="btn" href="index.html"><-Volver a Yoga</a>
+   </div>
 
 
 
