--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
             <div class="nav_logo">
                 <img src="images/iconowa.jpg" alt="logo">
-                <span>Jai Maa Yoga <span></span>| <span></span>Masaje <a href="masaje.html"></a></span>
+                <span>Jai Maa Yoga <span></span>| <span></span>Masaje</span>
             </div>
             
             <!-- <div> 
