--- a/index.html
+++ b/index.html
@@ -161,9 +161,31 @@
 </section>
  <!-- END OF SPLIDE -->
 
+ <div class="section_container header_container">
+    <div class="header_content">
+        <div class="header_image">
+            <img src="images/Victoria_sobremi.jpg" alt="header" />
+        </div>
+        <h2>Un poco sobre mi</h2>
+        <p><p>Desde muy jóven tenía muchas inquietudes sobre "quién era yo". Pero no ese "Yo" que conocemos como personalidad, no. El "Yo" interno. Los años iban pasando, y esa llamada interna era cada vez más fuerte. Hasta que el Yoga se cruzó en mi camino, para cambiarlo todo.
+            Comencé a meditar, a adentrarme en la respiración consciente, y todo empezaba a cobrar sentido. Fue el momento en el que supe que el Yoga había venido para quedarse en mi vida. El proceso siguió su camino, con formación en varios tipos de Yoga, técnicas de respiración, masaje/tacto consciente. 
+        Todo ello ha expandido mi consciencia y lo sigue haciendo, a la vez que acompaño a quien quiera hacerlo.
+    Es un modo de vida consciente, sobre la esterilla y fuera de ella. </p>
+    <p>Me llamo Victoria, y estaré encantada de ayudarte en tu camino.</p>
+    <div class="line"></div>
+    <p class="cursive">Mi agradecimiento a Dhyan Agni y Muditosan, mis maestros.</p></p>
+    </div>
+    
+</div>
+</header>
 
 
- <section class="section_container why_container">
+    </div>
+ </div>
+
+
+
+ <!-- <section class="section_container why_container"> 
     <a href="https://wa.me/34655121070?text=Me%20gustaría%20pedir%20una%20cita.%20Gracias!" class="whatsapp" target="_blank">
         <i class="fa-brands fa-whatsapp"></i></a>
     <div class="why_image" id="why_image_about">
@@ -181,7 +203,7 @@
         <p class="cursive">Mi agradecimiento a Dhyan Agni y Muditosan, mis maestros.</p>
         </div>
     </div>
- </section>
+ </section>-->
 
 <!--INICIO GALERÍA-->
 <div class="conteiner">
