--- a/index.html
+++ b/index.html
@@ -149,15 +149,17 @@
         </div>
 
     </div>
+    <div class="wrapper">
+        <h2>Estilos de Yoga que practicamos:</h2> 
+        <div>
+        <h2> <span></span></h2>
+    </div>
+    </div>
  </section>
 
  <!-- SPLIDE -->
 <section>
-<div class="wrapper">
-    <h2>Estilos de Yoga que practicamos: <span></span></h2>
-    
-    
-</div>
+
 </section>
  <!-- END OF SPLIDE -->
 
