--- a/masaje.html
+++ b/masaje.html
@@ -75,6 +75,11 @@
                     Auriculoterapia
                 </li>
                 <img src="images/auricula.jpg" alt="">
+                <li>
+                    <span><i class="ri-checkbox-circle-fill"></i></span>
+                    Organizadora de Círculo de Mujeres
+                </li>
+                <img src="images/circulomujeres.jpg" alt="">
             </ul>
 
         </div>
