--- a/masaje.html
+++ b/masaje.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="auriculoterapia en Mazagon, Masaje en Mazagon, masaje terapeutico en Huelva, masaje en Huelva" />
+	<meta name="keywords" content="masaje en Mazagón, sesiones de masaje en Mazagón, Yoga en Huelva, masaje en Mazagon, masaje flores de Bach en Mazagón, auriculoterapia en Mazagón" />
+	<meta name="robots" content="index. follow">
+	<meta name="author" content="Jai Maa Masaje Mazagón" />
     <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
     rel="stylesheet"
@@ -13,7 +17,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <title>Jai Maa Yoga</title>
+    <title>Jai Maa Masaje | Mazagón</title>
 </head>
 <body>
     <nav>
@@ -59,7 +63,7 @@
                 El terapeuta que lo realiza parte de la base que todo está perfecto; no hay juicio, ni pretensión de cambiar nada en la persona que lo recibe. Todas las personas que reciben el masaje coinciden en el resultado: es liberación, es paz; es una meditación compartida entre quién da y quién recibe. </p>
             
         </div>
-    </div>
+    </div> 
 
     <div class="why_content">
         <div class="why_content_terapias">
