--- a/masaje.html
+++ b/masaje.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="auriculoterapia en Mazagon, Masaje en Mazagon, masaje terapeutico en Huelva, masaje en Huelva" />
-	<meta name="keywords" content="masaje en Mazagón, sesiones de masaje en Mazagón, Yoga en Huelva, masaje en Mazagon, masaje flores de Bach en Mazagón, auriculoterapia en Mazagón" />
-	<meta name="robots" content="index. follow">
-	<meta name="author" content="Jai Maa Masaje Mazagón" />
+    <meta name="description" content="Sesiones de masaje y auriculoterapia en Mazagón" />
+	<meta name="keywords" content="masaje en Mazagón, sesiones de masaje en Mazagón, auriculoterapia en Mazagón, masaje en Mazagon, masaje flores de Bach en Mazagón, auriculoterapia en Mazagón" />
+	<meta name="robots" content="index, follow">
+	<meta name="author" content="Victoria Vázquez" />
+    <meta name="robots" content="index, follow">
+    <meta name="googlebot" content="index, follow">
+    <meta property="og:description" content="Jai Maa Yoga y masaje en Mazagón, para público de todas las edades. ">
+    <link rel="canonical" href="https://www.jai-maa-yoga.com/masaje.html">
+    <link rel="alternate" href="https://www.jai-maa-yoga.com/masaje.html" hreflang="es-ES">
     <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
     rel="stylesheet"
