--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <meta name="google-site-verification" content="Co_EcJ71TWYHBOfxXy41wzZnqxm2_kARqZyhN4SKKO0" />
     
     <title>Jai Maa Yoga | Mazagón</title>
 </head>
