--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
 
     </div>
     <div class="wrapper">
-        <h2>Estilos de Yoga que practicamos:</h2> 
+        <h2>Estilos:</h2> 
         <div>
         <h2> <span></span></h2>
-    </div>
+       </div>
     </div>
  </section>
 
@@ -276,6 +276,7 @@
                 <p>Martes y Jueves</p>
                 <p>Mañanas  10:00 - 11:00</p>
                 <p>Tardes  18:30 - 19:30</p>
+                <h4 class="hours">También clases online</h4>
                 <a class="btn membership_btn">EMPIEZA YA</a>
             </div>
         </div>
