--- a/masaje.html
+++ b/masaje.html
@@ -125,6 +125,9 @@
             <video src="Vídeos/Masaje Belén.mp4"  controls width="250"></video>
         </figure>   
         <figure class="animate-box">
+            <video src="Vídeos/Masaje Jesús.mp4"  controls width="250"></video>
+        </figure>   
+        <figure class="animate-box">
             <video src="Vídeos/Masaje_Mónica.mp4"  controls width="250"></video>
         </figure>   
         
