fotos asanas Victoria

--- a/index.html
+++ b/index.html
@@ -225,6 +225,8 @@
         <div class="image"><img src="images/sesiones1 (1).jpg" alt="Clase de Yoga en Mazagón, Jai Maa Yoga"></div>
         <div class="image"><img src="images/sesiones1 (2).jpg" alt="Clase de Yoga en Mazagón, Jai Maa Yoga"></div>
         <div class="image"><img src="images/sesiones1 (4).jpg" alt="Clase de Yoga en Mazagón, Jai Maa Yoga"></div>
+        <div class="image"><img src="images/asanaV1.jpg" alt="Clase de Yoga en Mazagón, Jai Maa Yoga"></div>
+        <div class="image"><img src="images/asanaV2.jpg" alt="Clase de Yoga en Mazagón, Jai Maa Yoga"></div>
     </div>
     <div class="popup_image">
         <span>&times;</span>
