--- a/masaje.html
+++ b/masaje.html
@@ -65,7 +65,7 @@
         <div class="why_content">
             <h2 class="section_header">El Masaje Arún Tacto Consciente</h2>
             <p>Es un masaje que engloba varias técnicas provenientes de Oriente y Occidente, que se utilizan para liberar todas las partes físicas de nuestro cuerpo, necesarias para su buen funcionamiento. Pero no se queda solo en lo físico.
-                 Una parte muy importante de este tipo de masaje es su lado energético(pues somos en gran parte energía), que contribuye a la liberación de nuestra psique y nuestras emociones. Nos ayuda a conectar con nuestra consciencia(que no conciencia), revelando todo aquello que tengamos que sanar. 
+                 Una parte muy importante de este tipo de masaje es su lado energético(pues somos energía), que contribuye a la liberación de nuestra psique y nuestras emociones. Nos ayuda a conectar con nuestra consciencia(que no conciencia), revelando todo aquello que tengamos que sanar. 
                 El terapeuta que lo realiza parte de la base que todo está perfecto; no hay juicio, ni pretensión de cambiar nada en la persona que lo recibe. Todas las personas que reciben el masaje coinciden en el resultado: es liberación, es paz; es una meditación compartida entre quién da y quién recibe. </p>
             
         </div>
