--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
     <h1>VÍDEOS</h1>
     <div class="image_conteiner">
        
-        <figure class="animate-box">
+        <figure class="animate-box" id="video">
            <video src="Vídeos/Primer video clases Yoga invierno.mp4" controls width="250"></video>
         </figure>      
     </div>
